src/antlr/FlutterParser.java
// Generated from C:/Users/faleh/Desktop/univ/compiler project 1/Compiler Project/Compile - Copy/src/antlr\FlutterParser.g4 by ANTLR 4.12.0
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FlutterParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ONCD=1, BORDER=2, STYLE=3, HINTTXT=4, DECORATION=5, TXTFLD=6, TXTBTN=7, 
		INDEC=8, NAV=9, PUSH=10, BUILDER=11, MPR=12, INT=13, CONST_=14, RUNAPP_=15, 
		MATERIALAPP_=16, HOME_=17, BODY_=18, CHILDREN_=19, SCAFFOLD_=20, ROW_=21, 
		COLOR_=22, PADDING_=23, COLORS_=24, CONTAINER_=25, CHILD_=26, BOOLEAN=27, 
		FLOAT=28, DOUBLE=29, DATA_TYPE=30, WIDTH_=31, HEIGHT_=32, MARGIN_=33, 
		WIDGET_=34, EDGEINSETS_=35, LISTVIEW_=36, BUILDCONTEXT_=37, GESTUREDETECTOR_=38, 
		ONTAP_=39, COLUMN_=40, TEXT_=41, SETSTATE_=42, VOID=43, INT_=44, STRING_=45, 
		FLOAT_=46, BOOLEAN_=47, FUNCTION_=48, MAP_=49, DOUBLE_=50, OVERRIDE_=51, 
		C_AND_F=52, LIST=53, PRINT_=54, A=55, AA=56, AE=57, AT=58, C=59, CB=60, 
		CBC=61, CIR=62, CIRE=63, CO=64, CP=65, D=66, LATE=67, EE=68, EG=69, EQ=70, 
		GT=71, LT=72, LTE=73, ME=74, MINUS=75, MM=76, NE=77, NOT=78, OB=79, OBC=80, 
		OP=81, P=82, PC=83, PE=84, PLPL=85, PL=86, PLE=87, PO=88, POE=89, PP=90, 
		SC=91, SE=92, SL=93, ST=94, STE=95, ABSTRACT_=96, AS_=97, BREAK_=98, CASE_=99, 
		CATCH_=100, CLASS_=101, CONTINUE_=102, DEFAULT_=103, DO_=104, DYNAMIC_=105, 
		ELSE_=106, ENUM_=107, EXTENDS_=108, FALSE_=109, FINAL_=110, FINALLY_=111, 
		FOR_=112, IF_=113, IMPLEMENTS_=114, IMPORT_=115, IN_=116, INTERFACE_=117, 
		IS_=118, LET_=119, LIBRARY_=120, NEW_=121, NULL_=122, OF_=123, ON_=124, 
		REQUIRED_=125, RETHROW_=126, RETURN_=127, STATIC_=128, SUPER_=129, SWITCH_=130, 
		THIS_=131, THROW_=132, TRUE_=133, TRY_=134, VAR_=135, WHILE_=136, UNDERSCORE=137, 
		STRING=138, QUTE=139, SQUTE=140, QM=141, HEX_NUMBER=142, SingleLineString=143, 
		MultiLineString=144, IDENTIFIER=145, WHITESPACE=146, SINGLE_LINE_COMMENT=147, 
		MULTI_LINE_COMMENT=148;
	public static final int
		RULE_program = 0, RULE_function = 1, RULE_function_header = 2, RULE_structure = 3, 
		RULE_function_body = 4, RULE_function_call = 5, RULE_return = 6, RULE_numbers = 7, 
		RULE_values = 8, RULE_id = 9, RULE_one_return = 10, RULE_argument = 11, 
		RULE_variable_call = 12, RULE_variable = 13, RULE_decl = 14, RULE_init = 15, 
		RULE_variable_access = 16, RULE_function_access = 17, RULE_class = 18, 
		RULE_class_header = 19, RULE_class_body = 20, RULE_class_type = 21, RULE_extends_class = 22, 
		RULE_class_instance = 23, RULE_class_call = 24, RULE_list = 25, RULE_list_decl = 26, 
		RULE_new_list = 27, RULE_list_values = 28, RULE_list_assignement = 29, 
		RULE_list_value_call = 30, RULE_override = 31, RULE_parameters = 32, RULE_fun = 33, 
		RULE_expr = 34, RULE_exp = 35, RULE_comparison_operations = 36, RULE_for_loop = 37, 
		RULE_for_header = 38, RULE_for_body = 39, RULE_for_var_decl = 40, RULE_for_var_init = 41, 
		RULE_for_var = 42, RULE_for_structure = 43, RULE_for_each = 44, RULE_for_each_header = 45, 
		RULE_while = 46, RULE_while_header = 47, RULE_do_while = 48, RULE_if = 49, 
		RULE_if_header = 50, RULE_else_if = 51, RULE_else = 52, RULE_try_catch = 53, 
		RULE_try = 54, RULE_catche = 55, RULE_finaly = 56, RULE_enum = 57, RULE_this = 58, 
		RULE_flutter_classes = 59, RULE_flutter_functions = 60, RULE_children = 61, 
		RULE_child = 62, RULE_color = 63, RULE_home = 64, RULE_body = 65, RULE_width = 66, 
		RULE_height = 67, RULE_margin = 68, RULE_padding = 69, RULE_on_tap = 70, 
		RULE_run_app_call = 71, RULE_material_app_call = 72, RULE_material_app_properities = 73, 
		RULE_scaffold_call = 74, RULE_scaffold_call_properities = 75, RULE_row = 76, 
		RULE_row_properities = 77, RULE_column = 78, RULE_column_properities = 79, 
		RULE_container = 80, RULE_container_properities = 81, RULE_list_view = 82, 
		RULE_set_state = 83, RULE_gesture_detector = 84, RULE_gesture_detector_properities = 85, 
		RULE_text = 86, RULE_import_f = 87, RULE_materialPageRoute = 88, RULE_builder = 89, 
		RULE_materialPageRouteProperities = 90, RULE_navigator = 91, RULE_textfield = 92, 
		RULE_textfieldproperties = 93, RULE_onchanged = 94, RULE_decoration = 95, 
		RULE_border = 96, RULE_hint = 97, RULE_inputDecoration = 98, RULE_inputDecorationProperties = 99, 
		RULE_button = 100, RULE_buttonProperties = 101;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "function", "function_header", "structure", "function_body", 
			"function_call", "return", "numbers", "values", "id", "one_return", "argument", 
			"variable_call", "variable", "decl", "init", "variable_access", "function_access", 
			"class", "class_header", "class_body", "class_type", "extends_class", 
			"class_instance", "class_call", "list", "list_decl", "new_list", "list_values", 
			"list_assignement", "list_value_call", "override", "parameters", "fun", 
			"expr", "exp", "comparison_operations", "for_loop", "for_header", "for_body", 
			"for_var_decl", "for_var_init", "for_var", "for_structure", "for_each", 
			"for_each_header", "while", "while_header", "do_while", "if", "if_header", 
			"else_if", "else", "try_catch", "try", "catche", "finaly", "enum", "this", 
			"flutter_classes", "flutter_functions", "children", "child", "color", 
			"home", "body", "width", "height", "margin", "padding", "on_tap", "run_app_call", 
			"material_app_call", "material_app_properities", "scaffold_call", "scaffold_call_properities", 
			"row", "row_properities", "column", "column_properities", "container", 
			"container_properities", "list_view", "set_state", "gesture_detector", 
			"gesture_detector_properities", "text", "import_f", "materialPageRoute", 
			"builder", "materialPageRouteProperities", "navigator", "textfield", 
			"textfieldproperties", "onchanged", "decoration", "border", "hint", "inputDecoration", 
			"inputDecorationProperties", "button", "buttonProperties"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'onChanged'", "'border'", "'style'", "'hintText'", "'decoration'", 
			"'TextFormField'", "'TextButton'", "'InputDecoration'", "'Navigator'", 
			"'push'", "'builder'", "'MaterialPageRoute'", null, "'const'", "'runApp'", 
			"'MaterialApp'", "'home'", "'body'", "'children'", "'Scaffold'", "'Row'", 
			"'color'", "'padding'", "'Colors'", "'Container'", "'child'", null, null, 
			null, null, "'width'", "'height'", "'margin'", "'Widget'", "'EdgeInsets'", 
			"'ListView'", "'BuildContext'", "'GestureDetector'", "'onTap'", "'Column'", 
			"'Text'", "'setState'", "'void'", "'int'", null, "'float'", "'boolean'", 
			"'Function()'", "'map'", "'double'", "'@override'", null, "'List'", "'print'", 
			"'&'", "'&&'", "'&='", "'@'", "','", "']'", "'}'", "'^'", "'^='", "':'", 
			"')'", "'.'", "'late'", "'=='", "'=>'", "'='", "'>'", "'<'", "'<='", 
			"'-='", "'-'", "'--'", "'!='", "'!'", "'['", "'{'", "'('", "'|'", "'%'", 
			"'%='", "'++'", "'+'", "'+='", "'#'", "'|='", "'||'", "';'", "'/='", 
			"'/'", "'*'", "'*='", "'abstract'", "'as'", "'break'", "'case'", "'catch'", 
			"'class'", "'continue'", "'default'", "'do'", "'dynamic'", "'else'", 
			"'enum'", "'extends'", "'false'", "'final'", "'finally'", "'for'", "'if'", 
			"'implements'", "'import'", "'in'", "'interface'", "'is'", "'let'", "'library'", 
			"'new'", "'null'", "'of'", "'on'", "'required'", "'rethrow'", "'return'", 
			"'static'", "'super'", "'switch'", "'this'", "'throw'", "'true'", "'try'", 
			"'var'", "'while'", "'_'", null, "'\"'", "'''", "'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ONCD", "BORDER", "STYLE", "HINTTXT", "DECORATION", "TXTFLD", "TXTBTN", 
			"INDEC", "NAV", "PUSH", "BUILDER", "MPR", "INT", "CONST_", "RUNAPP_", 
			"MATERIALAPP_", "HOME_", "BODY_", "CHILDREN_", "SCAFFOLD_", "ROW_", "COLOR_", 
			"PADDING_", "COLORS_", "CONTAINER_", "CHILD_", "BOOLEAN", "FLOAT", "DOUBLE", 
			"DATA_TYPE", "WIDTH_", "HEIGHT_", "MARGIN_", "WIDGET_", "EDGEINSETS_", 
			"LISTVIEW_", "BUILDCONTEXT_", "GESTUREDETECTOR_", "ONTAP_", "COLUMN_", 
			"TEXT_", "SETSTATE_", "VOID", "INT_", "STRING_", "FLOAT_", "BOOLEAN_", 
			"FUNCTION_", "MAP_", "DOUBLE_", "OVERRIDE_", "C_AND_F", "LIST", "PRINT_", 
			"A", "AA", "AE", "AT", "C", "CB", "CBC", "CIR", "CIRE", "CO", "CP", "D", 
			"LATE", "EE", "EG", "EQ", "GT", "LT", "LTE", "ME", "MINUS", "MM", "NE", 
			"NOT", "OB", "OBC", "OP", "P", "PC", "PE", "PLPL", "PL", "PLE", "PO", 
			"POE", "PP", "SC", "SE", "SL", "ST", "STE", "ABSTRACT_", "AS_", "BREAK_", 
			"CASE_", "CATCH_", "CLASS_", "CONTINUE_", "DEFAULT_", "DO_", "DYNAMIC_", 
			"ELSE_", "ENUM_", "EXTENDS_", "FALSE_", "FINAL_", "FINALLY_", "FOR_", 
			"IF_", "IMPLEMENTS_", "IMPORT_", "IN_", "INTERFACE_", "IS_", "LET_", 
			"LIBRARY_", "NEW_", "NULL_", "OF_", "ON_", "REQUIRED_", "RETHROW_", "RETURN_", 
			"STATIC_", "SUPER_", "SWITCH_", "THIS_", "THROW_", "TRUE_", "TRY_", "VAR_", 
			"WHILE_", "UNDERSCORE", "STRING", "QUTE", "SQUTE", "QM", "HEX_NUMBER", 
			"SingleLineString", "MultiLineString", "IDENTIFIER", "WHITESPACE", "SINGLE_LINE_COMMENT", 
			"MULTI_LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FlutterParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FlutterParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(FlutterParser.EOF, 0); }
		public List<TextfieldContext> textfield() {
			return getRuleContexts(TextfieldContext.class);
		}
		public TextfieldContext textfield(int i) {
			return getRuleContext(TextfieldContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<ClassContext> class_() {
			return getRuleContexts(ClassContext.class);
		}
		public ClassContext class_(int i) {
			return getRuleContext(ClassContext.class,i);
		}
		public List<Import_fContext> import_f() {
			return getRuleContexts(Import_fContext.class);
		}
		public Import_fContext import_f(int i) {
			return getRuleContext(Import_fContext.class,i);
		}
		public List<TerminalNode> SC() { return getTokens(FlutterParser.SC); }
		public TerminalNode SC(int i) {
			return getToken(FlutterParser.SC, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlutterParserVisitor ) return ((FlutterParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(210); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(210);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case TXTFLD:
					{
					setState(204);
					textfield();
					}
					break;
				case DATA_TYPE:
				case VOID:
				case STATIC_:
				case UNDERSCORE:
				case IDENTIFIER:
					{
					setState(205);
					function();
					}
					break;
				case ABSTRACT_:
				case CLASS_:
					{
					setState(206);
					class_();
					}
					break;
				case IMPORT_:
					{
					setState(207);
					import_f();
					setState(208);
					match(SC);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(212); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 8797166764096L) != 0) || ((((_la - 96)) & ~0x3f) == 0 && ((1L << (_la - 96)) & 565153272168481L) != 0) );
			setState(214);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public Function_headerContext function_header() {
			return getRuleContext(Function_headerContext.class,0);
		}
		public Function_bodyContext function_body() {
			return getRuleContext(Function_bodyContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlutterParserVisitor ) return ((FlutterParserVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(216);
			function_header();
			setState(217);
			function_body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_headerContext extends ParserRuleContext {
		public Function_accessContext function_access() {
			return getRuleContext(Function_accessContext.class,0);
		}
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public TerminalNode OP() { return getToken(FlutterParser.OP, 0); }
		public TerminalNode CP() { return getToken(FlutterParser.CP, 0); }
		public TerminalNode UNDERSCORE() { return getToken(FlutterParser.UNDERSCORE, 0); }
		public List<TerminalNode> DATA_TYPE() { return getTokens(FlutterParser.DATA_TYPE); }
		public TerminalNode DATA_TYPE(int i) {
			return getToken(FlutterParser.DATA_TYPE, i);
		}
		public List<TerminalNode> C() { return getTokens(FlutterParser.C); }
		public TerminalNode C(int i) {
			return getToken(FlutterParser.C, i);
		}
		public List<TerminalNode> QM() { return getTokens(FlutterParser.QM); }
		public TerminalNode QM(int i) {
			return getToken(FlutterParser.QM, i);
		}
		public Function_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).enterFunction_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).exitFunction_header(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlutterParserVisitor ) return ((FlutterParserVisitor<? extends T>)visitor).visitFunction_header(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_headerContext function_header() throws RecognitionException {
		Function_headerContext _localctx = new Function_headerContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(219);
			function_access();
			setState(221);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==UNDERSCORE) {
				{
				setState(220);
				match(UNDERSCORE);
				}
			}

			setState(223);
			id();
			setState(224);
			match(OP);
			setState(230);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DATA_TYPE) {
				{
				setState(225);
				match(DATA_TYPE);
				setState(227);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==QM) {
					{
					setState(226);
					match(QM);
					}
				}

				setState(229);
				id();
				}
			}

			setState(240);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==C) {
				{
				{
				setState(232);
				match(C);
				{
				setState(233);
				match(DATA_TYPE);
				setState(235);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==QM) {
					{
					setState(234);
					match(QM);
					}
				}

				setState(237);
				id();
				}
				}
				}
				setState(242);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(243);
			match(CP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructureContext extends ParserRuleContext {
		public Material_app_callContext material_app_call() {
			return getRuleContext(Material_app_callContext.class,0);
		}
		public Run_app_callContext run_app_call() {
			return getRuleContext(Run_app_callContext.class,0);
		}
		public Class_callContext class_call() {
			return getRuleContext(Class_callContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public InitContext init() {
			return getRuleContext(InitContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public ClassContext class_() {
			return getRuleContext(ClassContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public OverrideContext override() {
			return getRuleContext(OverrideContext.class,0);
		}
		public Variable_callContext variable_call() {
			return getRuleContext(Variable_callContext.class,0);
		}
		public List_assignementContext list_assignement() {
			return getRuleContext(List_assignementContext.class,0);
		}
		public For_loopContext for_loop() {
			return getRuleContext(For_loopContext.class,0);
		}
		public For_eachContext for_each() {
			return getRuleContext(For_eachContext.class,0);
		}
		public WhileContext while_() {
			return getRuleContext(WhileContext.class,0);
		}
		public Do_whileContext do_while() {
			return getRuleContext(Do_whileContext.class,0);
		}
		public IfContext if_() {
			return getRuleContext(IfContext.class,0);
		}
		public Try_catchContext try_catch() {
			return getRuleContext(Try_catchContext.class,0);
		}
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public TerminalNode SC() { return getToken(FlutterParser.SC, 0); }
		public List_value_callContext list_value_call() {
			return getRuleContext(List_value_callContext.class,0);
		}
		public EnumContext enum_() {
			return getRuleContext(EnumContext.class,0);
		}
		public Class_instanceContext class_instance() {
			return getRuleContext(Class_instanceContext.class,0);
		}
		public Flutter_functionsContext flutter_functions() {
			return getRuleContext(Flutter_functionsContext.class,0);
		}
		public ThisContext this_() {
			return getRuleContext(ThisContext.class,0);
		}
		public ReturnContext return_() {
			return getRuleContext(ReturnContext.class,0);
		}
		public One_returnContext one_return() {
			return getRuleContext(One_returnContext.class,0);
		}
		public StructureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).enterStructure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).exitStructure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlutterParserVisitor ) return ((FlutterParserVisitor<? extends T>)visitor).visitStructure(this);
			else return visitor.visitChildren(this);
		}
	}
